--- a/src/app/components/pages/home/elements/top/top.scss
+++ b/src/app/components/pages/home/elements/top/top.scss
@@ -2,7 +2,6 @@
     position: relative;
     width: 100%;
     height: 95vh;
-
     &:after {
         position: absolute;
         display: block;
@@ -11,11 +10,9 @@
         left: 0;
         right: 0;
         height: 135px;
-
         background-color: #fff;
         clip-path: polygon(100% 0%, -10% 101%, 100% 101%);
     }
-
     &--bg {
         position: absolute;
         top: 0;
@@ -23,8 +20,6 @@
         right: 0;
         bottom: 0;
         z-index: -1;
-        background-image: url("../images/home-top.jpg");
-
         &:before {
             position: absolute;
             content: "";
@@ -33,25 +28,21 @@
             left: 0;
             right: 0;
             z-index: -1;
-
-            background: linear-gradient(130deg, rgba(32, 27, 138, 1) 0%, rgba(111, 137, 230, 1) 100%);
+            background: linear-gradient(130deg, #201b8a, #000000);
             opacity: 0.6;
         }
     }
-
     &--title {
         position: relative;
         align-self: center;
         padding-left: 14.5%;
-
-        & > h4 {
-            font-family: "Roboto-Redular", sans-serif;
+        &>h4 {
+            font-family: "Roboto-Light", sans-serif;
             font-size: 16px;
             margin: 16px 0 0;
             color: #dcdcdc;
         }
-
-        & > hr {
+        &>hr {
             margin: 12px 0 0;
             border: 0;
             width: 54%;
@@ -59,12 +50,10 @@
             background-color: #fff;
         }
     }
-
     .scroll-next {
         position: absolute;
         bottom: 135px;
         width: 100%;
-
         &--container {
             position: relative;
             width: 35px;
@@ -73,15 +62,12 @@
             justify-content: center;
             align-items: center;
             cursor: pointer;
-
             svg {
                 width: 31px;
                 height: 31px;
                 color: white;
-
                 transition: all 0.3s ease;
             }
-
             &:before,
             &:after {
                 position: absolute;
@@ -91,26 +77,21 @@
                 left: 0;
                 right: 0;
                 border-radius: 50%;
-
                 transition: opacity 0.3s ease;
-
                 animation-name: scroll-next-anim;
                 animation-timing-function: ease-out;
                 animation-duration: 3s;
                 animation-iteration-count: infinite;
             }
-
             &:before {
                 border: 1px dotted white;
                 animation-delay: 0;
             }
-
             &:after {
                 border: 1px dotted white;
                 animation-delay: 0.75s;
             }
-
-            &:hover > svg {
+            &:hover>svg {
                 color: #dcdcdc;
                 transform: scale(1.1);
                 filter: blur(0.5px);
