--- a/src/app/components/pages/company/company.scss
+++ b/src/app/components/pages/company/company.scss
@@ -4,6 +4,7 @@
         z-index: 1;
     }
     .content {
+        position: relative;
         border-radius: 4px;
         z-index: 2;
         transform: translateX(-25%) translateY(15%);
@@ -13,6 +14,8 @@
     img {
         width: 350px;
         height: 350px;
+        border-radius: 4px;
+        box-shadow: 0px 3px 6px rgba($color: #000000, $alpha: .16), 0px 6px 9px rgba($color: #000000, $alpha: .26);
     }
     .content {
         display: flex;
@@ -22,6 +25,7 @@
         height: 350px;
         padding: 32px 26px;
         >a {
+            z-index: 1;
             margin-top: auto;
         }
     }
@@ -35,7 +39,7 @@
             text-align: right;
             transform: translateX(25%) translateY(15%);
             background: linear-gradient(150deg, $main-dark-color 0%, $main-dark-color 35%, $main-middle-color 100%);
-            >a {
+            fade-out>a {
                 float: right;
             }
         }
