--- a/src/public/styles/styles.scss
+++ b/src/public/styles/styles.scss
@@ -519,6 +519,7 @@ article.text {
 @import "../../app/components/pages/products/products.scss";
 @import "../../app/components/pages/products-selected/product-selected.scss";
 @import "../../app/components/blocks/entry-content/entry-content.scss";
+@import "../../app/components/blocks/data-preloader/data-preloader.scss";
 @import "../../app/components/blocks/header/header.scss";
 @import "../../app/components/blocks/blackout/blackout.scss";
 @import "../../app/components/blocks/sideMenu/sideMenu.scss";
