--- a/src/app/components/pages/home/elements/top/top.scss
+++ b/src/app/components/pages/home/elements/top/top.scss
@@ -98,6 +98,40 @@
             }
         }
     }
+    .logos {
+        position: absolute;
+        bottom: -14px;
+        right: 7%;
+        z-index: 1;
+        transition: transform .6s ease, opacity .3s ease;
+        &.hidden {
+            transform: translateY(-100%);
+            opacity: 0;
+        }
+        &>.logos-block {
+            display: table;
+            margin: 0 12px;
+            &>.caption {
+                display: table-cell;
+                vertical-align: middle;
+                font-family: inherit;
+                color: $main-text-color;
+                letter-spacing: normal;
+                line-height: 1;
+                padding-right: 12px;
+                @include responsive(font-size, (20, 16));
+            }
+            &>.logo {
+                display: table-cell;
+                vertical-align: middle;
+                width: 75px;
+                height: 75px;
+                background-position: center center;
+                background-size: contain;
+                background-repeat: no-repeat;
+            }
+        }
+    }
 }
 
 @keyframes scroll-next-anim {
