--- a/src/app/components/pages/products/products.scss
+++ b/src/app/components/pages/products/products.scss
@@ -99,12 +99,12 @@
         .img {
             position: relative;
             display: block;
-            background-position: center bottom;
+            background-position: top;
             background-repeat: no-repeat;
-            background-size: cover;
+            background-size: contain;
             width: 100%;
             height: 100%;
-            transform: translateY(-50px);
+            transform: scale(.9) translateY(-10px);
         }
     }
 }
