--- a/src/app/components/pages/products-selected/product-selected.scss
+++ b/src/app/components/pages/products-selected/product-selected.scss
@@ -1,8 +1,92 @@
 .product-selected--slider {
-    & > .slider-item {
-        & > input[type='radio'] { display: none; }
-        & > label {
-            
+    display: block;
+    white-space: nowrap;
+    padding: 10px 8px;
+    user-select: none;
+
+    > .product-selected--slider_container {
+        width: 100%;
+        > .slider--list {
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+
+            > .slider--track {
+                & > .slider-item,
+                & > .slider-item > label,
+                & > .slider-item > label > .slider--item_image,
+                & > .slider-item > label:before {
+                    border-radius: 4px;
+                }
+
+                & > .slider-item {
+                    position: relative;
+                    display: inline-block;
+                    width: 195px;
+                    height: 135px;
+                    margin: 0 7px;
+                    background-color: rgba(9, 28, 255, 0.04);
+                    box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.26);
+                    transition: all 0.3s ease;
+                    overflow: hidden;
+                    flex-shrink: 0;
+
+                    & > input[type="radio"] {
+                        display: none;
+                    }
+                    & > label {
+                        display: flex;
+                        flex-direction: column;
+                        align-items: center;
+                        justify-content: center;
+                        flex-wrap: nowrap;
+                        width: inherit;
+                        height: inherit;
+                        cursor: pointer;
+                        transition: all 0.3s ease;
+
+                        > .slider--item_image {
+                            display: block;
+                            position: relative;
+                            width: 100%;
+                            height: 100%;
+                            background-size: contain;
+                            background-position: center center;
+                            background-repeat: no-repeat;
+                            transform: scale(0.9);
+                            transition: all 0.3s ease;
+                        }
+
+                        > span {
+                            font-size: 16px;
+                            font-weight: 400;
+                            padding: 4px 0;
+                            text-shadow: 0px 0px 1px rgba($color: #000000, $alpha: 0.65);
+                            width: 100%;
+                            text-align: center;
+                            background-color: #025bfc4d;
+                            transition: all 0.3s ease;
+                            user-select: none;
+                        }
+                    }
+
+                    &.selected {
+                        background-color: transparent;
+                        box-shadow: none;
+
+                        > label > .slider--item_image {
+                            align-self: center;
+                            justify-self: center;
+                            transform: scale(1.2) translateY(12px);
+                        }
+
+                        > label > span {
+                            transform: translateY(100%);
+                            opacity: 0;
+                        }
+                    }
+                }
+            }
         }
     }
 }
