Add functions event to slider

--- a/src/app/components/pages/products-selected/product-selected.scss
+++ b/src/app/components/pages/products-selected/product-selected.scss
@@ -20,6 +20,8 @@
                 }
 
                 & > .slider-item {
+                    &.events-block { pointer-events: none; }
+                    
                     position: relative;
                     display: inline-block;
                     width: 195px;
