Created info block with info state

--- a/src/public/styles/styles.scss
+++ b/src/public/styles/styles.scss
@@ -548,6 +548,7 @@ article.text {
 @import "../../app/components/pages/products/products.scss";
 @import "../../app/components/pages/products-selected/product-selected.scss";
 @import "../../app/components/pages/leaderships/leaderships.scss";
+@import "../../app/components/blocks/information/information.scss";
 @import "../../app/components/blocks/entry-content/entry-content.scss";
 @import "../../app/components/blocks/data-preloader/data-preloader.scss";
 @import "../../app/components/blocks/header/header.scss";
