--- a/src/public/styles/utils/vars.scss
+++ b/src/public/styles/utils/vars.scss
@@ -18,6 +18,8 @@ $light-title-color: #fafafa;
 $main-text-color: #616161;
 $light-text-color: #bdbdbd;
 
+$info-block-color: rgb(60, 63, 231);
+
 //  Line heights
 $default-line-height: 1.5;
 $lower-line-height: 1.2;
