--- a/src/app/components/pages/products-selected/product-selected.scss
+++ b/src/app/components/pages/products-selected/product-selected.scss
@@ -4,15 +4,15 @@
     padding: 10px 0;
     user-select: none;
 
-    > .product-selected--slider_container {
-        width: 100%;
+    > .swiper-container {
         margin: 0 0 72px;
-        > .slider--list {
-            width: 100%;
-            height: 100%;
-            overflow: hidden;
+        > .swiper-wrapper {
+            flex-direction: row;
+            > .swiper-slide {
+                width: 195px;
+                height: 135px;
 
-            > .slider--track {
+
                 & > .slider-item,
                 & > .slider-item > label,
                 & > .slider-item > label > .slider--item_image,
@@ -21,14 +21,10 @@
                 }
 
                 & > .slider-item {
-                    &.events-block {
-                        pointer-events: none;
-                    }
-
                     position: relative;
                     display: inline-block;
-                    width: 195px;
-                    height: 135px;
+                    width: inherit;
+                    height: inherit;
                     margin: 0 7px;
                     background-color: rgba(9, 28, 255, 0.04);
                     box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.26);
@@ -60,6 +56,10 @@
                             background-repeat: no-repeat;
                             transform: scale(0.9);
                             transition: all 0.3s ease;
+
+                            &.no-image {
+                                transform: scale(.75) translate3d(0, 0, 0) !important;
+                            }
                         }
 
                         > span {
@@ -151,7 +151,7 @@
                     text-decoration: inherit;
                     text-transform: inherit;
                     color: #616161;
-                    @include responsive('font-size', (16, 14));
+                    @include responsive("font-size", (16, 14));
                     padding: 4px 12px;
                 }
             }
